--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "storybook:ios": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo run:ios",
     "storybook:android": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo run:android",
     "clean": "expo prebuild --clean",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@gorhom/bottom-sheet": "^5.1.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
     "expo": "~52.0.31",
     "expo-constants": "~17.0.5",
+    "expo-font": "~13.0.3",
     "expo-status-bar": "~2.0.1",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -32,6 +37,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
+    "react-native-unistyles": "^2.20.0",
     "react-native-web": "~0.19.13"
   },
   "devDependencies": {
@@ -51,6 +57,8 @@
     "@storybook/react-native": "^8.5.4",
     "@storybook/react-native-web-vite": "^8.5.3",
     "@storybook/test": "^8.5.3",
+    "@testing-library/react-native": "^13.0.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "babel-plugin-react-docgen-typescript": "^1.5.1",
     "babel-plugin-react-native-web": "^0.19.10",
@@ -60,7 +68,10 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "prettier": "^3.5.0",
+    "react-test-renderer": "^18.3.1",
     "storybook": "^8.5.3",
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
     "vite": "^6.0.11"
   },
@@ -69,11 +80,5 @@
   },
   "overrides": {
     "react-docgen-typescript": "2.2.2"
-  },
-  "pnpm": {
-    "overrides": {
-      "react-docgen-typescript": "2.2.2"
-    }
-  },
-  "private": true
+  }
 }
