--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "react-native-svg": "15.8.0",
     "react-native-unistyles": "^2.20.0",
     "react-native-web": "~0.19.13",
-    "expo-symbols": "~0.2.2"
+    "expo-symbols": "~0.2.2",
+    "expo-image": "~2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
