--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "storybook:android": "cross-env EXPO_PUBLIC_STORYBOOK_ENABLED='true' expo run:android",
     "clean": "expo prebuild --clean",
     "lint": "eslint .",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
@@ -24,12 +25,14 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/slider": "4.5.5",
-    "expo": "~52.0.31",
+    "expo": "~52.0.35",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
+    "expo-image": "~2.0.5",
     "expo-status-bar": "~2.0.1",
+    "expo-symbols": "~0.2.2",
     "jest": "~29.7.0",
-    "jest-expo": "~52.0.3",
+    "jest-expo": "~52.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
@@ -38,9 +41,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-svg": "15.8.0",
     "react-native-unistyles": "^2.20.0",
-    "react-native-web": "~0.19.13",
-    "expo-symbols": "~0.2.2",
-    "expo-image": "~2.0.5"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
@@ -69,6 +70,7 @@
     "eslint-config-expo": "~8.0.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
+    "patch-package": "^8.0.0",
     "prettier": "^3.5.0",
     "react-test-renderer": "^18.3.1",
     "storybook": "^8.5.3",
