--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@expo-google-fonts/roboto": "^0.2.3",
     "@gorhom/bottom-sheet": "^5.1.1",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
@@ -77,6 +76,29 @@
     "ts-node": "^10.9.2",
     "typescript": "~5.3.3",
     "vite": "^6.0.11"
+  },
+  "peerDependencies": {
+    "@gorhom/bottom-sheet": "5.1.x",
+    "@react-native-async-storage/async-storage": "1.23.x",
+    "@react-native-community/datetimepicker": "8.2.x",
+    "@react-native-community/slider": "4.5.x",
+    "expo": "52.0.x",
+    "expo-constants": "17.0.x",
+    "expo-font": "13.0.x",
+    "expo-image": "2.0.x",
+    "expo-status-bar": "2.0.x",
+    "expo-symbols": "0.2.x",
+    "jest": "29.7.",
+    "jest-expo": "52.0.x",
+    "react": "18.3.x",
+    "react-dom": "18.3.x",
+    "react-native": "0.76.x",
+    "react-native-gesture-handler": "2.20.x",
+    "react-native-reanimated": "3.16.x",
+    "react-native-safe-area-context": "4.12.x",
+    "react-native-svg": "15.8.x",
+    "react-native-unistyles": "2.20.x",
+    "react-native-web": "0.19.x"
   },
   "resolutions": {
     "react-docgen-typescript": "2.2.2"
